# test_dailymotion

./: .dockerignore  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  init.sql  pyproject.toml  user_registration_api (5).md
.github/workflows/: ci.yml
app/: main.py  worker.py
app/api/: depends.py
app/api/models/: common.py  user.py
app/api/routes/: user.py
app/core/: config.py  logging.py  security.py
app/db/: pool.py  user.py  verification_code.py
app/services/: resend_client.py  user.py
tests/: conftest.py  test_main.py
tests/routes/: test_user.py
tests/services/: test_user_service.py
