[project]
name = "constantin-guidon-test-dailymotion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.133.1",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.0.0",
    "uvicorn[standard]>=0.34.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
